--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   equatable: ^2.0.3
   dartz: ^0.10.0
   http: ^0.13.3
+  internet_connection_checker: ^0.0.1+3
 
 dev_dependencies:
   flutter_test:
