--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   dartz: ^0.10.0
   http: ^0.13.3
   internet_connection_checker: ^0.0.1+3
+  shared_preferences: ^2.0.7
 
 dev_dependencies:
   flutter_test:
